--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 	<div class="wrapper">
+		<a href="#" class="mob-btn" data-jq-button>
+			<svg fill="#FFFFFF" height="32" viewBox="0 0 24 24" width="32" xmlns="http://www.w3.org/2000/svg">
+				<path d="M0 0h24v24H0z" fill="none"></path>
+				<path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+			</svg>
+		</a>
 		<ul class="menu-top" data-jq data-jq--style data-jq--title="Каталог" style="color: #red;">
 			<li><a href="#">text 1</a></li>
 			<li><a href="#">text 2</a></li>
