--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 	<div class="wrapper">
+		<div class="logo" data-jq--top>
+			<a href="/">LOGO SITE</a>
+		</div>
 		<a href="#" class="mob-btn" data-jq--button>
 			<svg fill="#FFFFFF" height="32" viewBox="0 0 24 24" width="32" xmlns="http://www.w3.org/2000/svg">
 				<path d="M0 0h24v24H0z" fill="none"></path>
@@ -53,6 +56,9 @@
 			<li><a href="#">ttttt3</a></li>
 			<li><a href="#">ttttt4</a></li>
 		</ul>
+		<div class="desc" data-jq--bot>
+			DESK SITE
+		</div>
 	</div>
 </body>
 </html>
